--- a/portal/package.json
+++ b/portal/package.json
@@ -1,32 +1,35 @@
 {
   "name": "espconnect-portal",
   "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "build": "rollup -c && node compress.js",
+    "build": "rollup -c && npm run compress",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "compress": "node compress.js"
   },
   "devDependencies": {
     "@gfx/zopfli": "^1.0.15",
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "autoprefixer": "^10.2.4",
-    "node-sass": "^5.0.0",
+    "node-sass": "^9.0.0",
     "postcss": "^8.1.7",
-    "postcss-import": "^13.0.0",
-    "postcss-load-config": "^3.0.0",
+    "postcss-import": "^15.1.0",
+    "postcss-load-config": "^4.0.2",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
+    "rollup-plugin-svelte": "6.1.1",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^4.6.5"
   },
   "dependencies": {
     "milligram": "^1.4.1",
-    "sass": "^1.32.5",
-    "sirv-cli": "^1.0.0",
+    "sass": "^1.69.5",
+    "sirv-cli": "2.0.2",
     "spinthatshit": "^1.0.4"
   }
 }
