Remove missing lib from Arduino registry AsyncTCP-esphome

--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Communication
 url=https://github.com/mathieucarbou/MycilaESPConnect
 architectures=esp32
 license=GPL-3.0-only
-depends=ArduinoJson,ESP Async WebServer,AsyncTCP-esphome
+depends=ArduinoJson,ESP Async WebServer
