--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # bundle exec jekyll serve --host=0.0.0.0
 
-title: Simple & Easy WiFi Manager with Captive Portal for ESP32
-description: A simplistic approach to a WiFi Manager on ESP32 MCUs. Comes with captive portal to configure modules without any hassle.
+title: MycilaESPConnect
+description: Simple & Easy WiFi Manager with Captive Portal for ESP32
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
