--- a/platformio.ini
+++ b/platformio.ini
@@ -1,25 +1,44 @@
+
 [env]
+platform = espressif32@6.5.0
+framework = arduino
+
 lib_deps = 
-  bblanchon/ArduinoJson @ 7.0.2
+  bblanchon/ArduinoJson @ 7.0.3
   mathieucarbou/ESP Async WebServer @ 2.4.4
 
-build_flags = -Wall -Wextra
+build_flags =
+  -Wall
+  -Wextra
+  -D CONFIG_ARDUHAL_LOG_COLORS
+  -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
 upload_protocol = esptool
-upload_port = /dev/cu.usbserial-0001
+; upload_port = /dev/cu.usbserial-0001
+; upload_port = /dev/cu.usbserial-10
 
-monitor_port = /dev/cu.usbserial-0001
+; monitor_port = /dev/cu.usbserial-0001
+; monitor_port = /dev/cu.usbserial-10
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
 
 [platformio]
+default_envs = wt32-eth01
 lib_dir = .
-; src_dir = examples/BlockingCaptivePortal
+src_dir = examples/BlockingCaptivePortal
 ; src_dir = examples/NonBlockingCaptivePortal
-src_dir = examples/AdvancedCaptivePortal
-
+; src_dir = examples/AdvancedCaptivePortal
 
 [env:esp32]
-platform = espressif32@6.5.0
 board = esp32dev
-framework = arduino
+
+[env:wt32-eth01]
+board = wt32-eth01
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_RESET_ON_START
+  -D ETH_PHY_TYPE=ETH_PHY_LAN8720
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_MDC=23
+  -D ETH_PHY_MDIO=18
+  -D ETH_CLK_MODE=ETH_CLOCK_GPIO0_IN
+  -D ETH_PHY_POWER=16
