--- a/platformio.ini
+++ b/platformio.ini
@@ -5,7 +5,7 @@ framework = arduino
 
 lib_deps = 
   bblanchon/ArduinoJson @ 7.0.3
-  mathieucarbou/ESP Async WebServer @ 2.4.4
+  mathieucarbou/ESP Async WebServer @ 2.7.0
 
 build_flags =
   -Wall
@@ -23,22 +23,38 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
 
 [platformio]
-default_envs = wt32-eth01
+; default_envs = esp32dev
+; default_envs = esp32-poe
+; default_envs = wt32-eth01
+default_envs = lilygo_eth_lite_s3
 lib_dir = .
-src_dir = examples/BlockingCaptivePortal
-; src_dir = examples/NonBlockingCaptivePortal
+; src_dir = examples/BlockingCaptivePortal
+src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 
-[env:esp32]
+[env:esp32dev]
 board = esp32dev
+
+[env:esp32-poe]
+board = esp32-poe
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
 
 [env:wt32-eth01]
 board = wt32-eth01
 build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_RESET_ON_START
-  -D ETH_PHY_TYPE=ETH_PHY_LAN8720
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_MDC=23
-  -D ETH_PHY_MDIO=18
-  -D ETH_CLK_MODE=ETH_CLOCK_GPIO0_IN
+  -D ESPCONNECT_ETH_SUPPORT
   -D ETH_PHY_POWER=16
+
+[env:lilygo_eth_lite_s3]
+upload_speed = 115200
+board = esp32s3box
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ESPCONNECT_ETH_CS=9
+  -D ESPCONNECT_ETH_INT=13
+  -D ESPCONNECT_ETH_MISO=11
+  -D ESPCONNECT_ETH_MOSI=12
+  -D ESPCONNECT_ETH_RST=14
+  -D ESPCONNECT_ETH_SCLK=10
+  -UARDUINO_USB_CDC_ON_BOOT
