--- a/platformio.ini
+++ b/platformio.ini
@@ -23,10 +23,10 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
 
 [platformio]
-; default_envs = esp32dev
+default_envs = esp32dev
 ; default_envs = esp32-poe
 ; default_envs = wt32-eth01
-default_envs = lilygo_eth_lite_s3
+; default_envs = lilygo_eth_lite_s3
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 src_dir = examples/NonBlockingCaptivePortal
