--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,16 @@
 
 [env]
-platform = espressif32@6.5.0
+; platform = espressif32@6.5.0
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-alpha3
+  platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+
 framework = arduino
 
 lib_deps = 
   bblanchon/ArduinoJson @ 7.0.4
-  mathieucarbou/ESP Async WebServer @ 2.8.0
+  mathieucarbou/ESP Async WebServer @ 2.8.1
 
 build_flags =
   -Wall
