--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # bundle exec jekyll serve --host=0.0.0.0
 
 title: MycilaESPConnect
-description: Simple & Easy WiFi Manager with Captive Portal for ESP32
+description: Simple & Easy Network Manager for ESP32 with WiFi, Ethernet and Captive Portal support
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
