--- a/platformio.ini
+++ b/platformio.ini
@@ -28,10 +28,10 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
 
 [platformio]
-default_envs = esp32dev
+; default_envs = esp32dev
 ; default_envs = esp32-poe
 ; default_envs = wt32-eth01
-; default_envs = lilygo_eth_lite_s3
+default_envs = lilygo_eth_lite_s3
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 src_dir = examples/NonBlockingCaptivePortal
@@ -49,6 +49,7 @@ build_flags = ${env.build_flags}
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=16
 
 [env:lilygo_eth_lite_s3]
@@ -56,10 +57,13 @@ upload_speed = 115200
 board = esp32s3box
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
-  -D ESPCONNECT_ETH_CS=9
-  -D ESPCONNECT_ETH_INT=13
-  -D ESPCONNECT_ETH_MISO=11
-  -D ESPCONNECT_ETH_MOSI=12
-  -D ESPCONNECT_ETH_RST=14
-  -D ESPCONNECT_ETH_SCLK=10
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_CS=9
+  -D ETH_PHY_IRQ=13
+  -D ETH_PHY_RST=14
+  -D ETH_PHY_SPI_MISO=11
+  -D ETH_PHY_SPI_MOSI=12
+  -D ETH_PHY_SPI_SCK=10
+  ; can only be activated with ESP-IDF >= 5
+  -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
