--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=MycilaESPConnect
 version=3.2.4
 author=Ayush Sharma
 maintainer=Mathieu Carbou <mathieu.carbou@gmail.com>
-sentence=Simple & Easy WiFi Manager with Captive Portal for ESP32
+sentence=Simple & Easy Network Manager for ESP32 with WiFi, Ethernet and Captive Portal support
 paragraph=A simplistic approach to a WiFi Manager on ESP32 MCUs. Comes with captive portal to configure modules without any hassle.
 category=Communication
 url=https://github.com/mathieucarbou/MycilaESPConnect
