--- a/platformio.ini
+++ b/platformio.ini
@@ -3,7 +3,7 @@
 ; platform = espressif32@6.5.0
 platform = espressif32
 platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-alpha3
+  platformio/framework-arduinoespressif32 @ https://github.com/mathieucarbou/arduino-esp32.git#3.0.0-alpha3-fixes
   platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 
 framework = arduino
