--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,16 @@
 
 [env]
-; platform = espressif32@6.6.0
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/mathieucarbou/arduino-esp32.git#3.0.0-alpha3-fixes
-  platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+platform = espressif32@6.6.0
+; platform = espressif32
+; platform_packages=
+;   platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+;   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 
 framework = arduino
 
 lib_deps = 
   bblanchon/ArduinoJson @ 7.0.4
-  mathieucarbou/ESP Async WebServer @ 2.9.0
+  mathieucarbou/ESP Async WebServer @ 2.9.2
 
 build_flags =
   -Wall
@@ -31,7 +31,7 @@ monitor_filters = esp32_exception_decoder, log2file
 ; default_envs = esp32dev
 ; default_envs = esp32-poe
 ; default_envs = wt32-eth01
-default_envs = lilygo_eth_lite_s3
+; default_envs = lilygo_eth_lite_s3
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 src_dir = examples/NonBlockingCaptivePortal
