Update CI for Arduino 3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         run: arduino-cli lib install ArduinoJson@7.0.2
 
       - name: Install AsyncTCP-esphome
-        run: ARDUINO_LIBRARY_ENABLE_UNSAFE_INSTALL=true arduino-cli lib install --git-url https://github.com/mathieucarbou/AsyncTCP#v3.0.0
+        run: ARDUINO_LIBRARY_ENABLE_UNSAFE_INSTALL=true arduino-cli lib install --git-url https://github.com/mathieucarbou/AsyncTCP#v3.0.2
 
       - name: Install ESP Async WebServer
         run: ARDUINO_LIBRARY_ENABLE_UNSAFE_INSTALL=true arduino-cli lib install --git-url https://github.com/mathieucarbou/ESPAsyncWebServer#v2.9.2
@@ -89,75 +89,57 @@ jobs:
       - name: Build AdvancedCaptivePortal
         run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/AdvancedCaptivePortal/AdvancedCaptivePortal.ino"
 
+  pio_envs:
+    name: Get PlatformIO Envs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-pio_envs
+          path: ~/.cache/pip
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - name: Install PlatformIO
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio
+      - name: Get Envs
+        id: envs
+        run: |
+          echo "pio_default_envs=$(pio project config --json-output | jq -cr '[ .[][0] | select(startswith("env:") and (endswith("-debug")|not)) | .[4:] ]')" >> $GITHUB_OUTPUT
+
+    outputs:
+      pio_default_envs: ${{ steps.envs.outputs.pio_default_envs }}
+
   platformio:
-    name: PlatformIO
-    needs: cpplint
+    name: "pio:${{ matrix.environment }}"
+    needs: [cpplint, pio_envs]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - platform: espressif32
-            board: esp32dev
-            flags:
-            opts:
-          - platform: espressif32
-            board: wt32-eth01
-            flags: "-DESPCONNECT_ETH_SUPPORT -DETH_PHY_POWER=16"
-            opts:
-          - platform: espressif32
-            board: esp32s3box
-            flags: "-DESPCONNECT_ETH_SUPPORT -DETH_PHY_CS=9 -DETH_PHY_IRQ=13 -DETH_PHY_MISO=11 -DETH_PHY_MOSI=12 -DETH_PHY_RST=14 -DETH_PHY_SCK=10"
-            opts:
-          - platform: espressif32
-            board: esp32-poe
-            flags:
-            opts:
-          - platform: espressif32
-            board: esp32dev
-            flags:
-            opts: "--project-option 'platform_packages=platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1, platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1'"
-          - platform: espressif32
-            board: wt32-eth01
-            flags: "-DESPCONNECT_ETH_SUPPORT -DETH_PHY_POWER=16"
-            opts: "--project-option 'platform_packages=platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1, platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1'"
-          - platform: espressif32
-            board: esp32s3box
-            flags: "-DESPCONNECT_ETH_SUPPORT -DETH_PHY_ADDR=1 -DETH_PHY_CS=9 -DETH_PHY_IRQ=13 -DETH_PHY_RST=14 -DETH_PHY_SPI_MISO=11 -DETH_PHY_SPI_MOSI=12 -DETH_PHY_SPI_SCK=10 -DETH_PHY_TYPE=ETH_PHY_W5500"
-            opts: "--project-option 'platform_packages=platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1, platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1'"
-          - platform: espressif32
-            board: esp32-poe
-            flags:
-            opts: "--project-option 'platform_packages=platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1, platform_packages=platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1'"
+        environment: ${{ fromJSON(needs.pio_envs.outputs.pio_default_envs) }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up cache
-        uses: actions/cache@v4
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.platformio
             ~/.cache/pip
-          key: ${{ runner.os }}-platformio
-
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v5
+          key: "pio:${{ matrix.environment }}"
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+      - run: pip install platformio
 
-      - name: Install PlatformIO
-        run: pip install platformio
-
-      - name: Install platform "${{ matrix.platform }}"
-        run: platformio platform install ${{ matrix.platform }}
-
-      - name: Build BlockingCaptivePortal
-        run: platformio ci "examples/BlockingCaptivePortal/BlockingCaptivePortal.ino" -l '.' -b ${{ matrix.board }} -O "build_flags=${{ matrix.flags }}" ${{ matrix.opts }}
-
-      - name: Build NonBlockingCaptivePortal
-        run: platformio ci "examples/NonBlockingCaptivePortal/NonBlockingCaptivePortal.ino" -l '.' -b ${{ matrix.board }} -O "build_flags=${{ matrix.flags }}" ${{ matrix.opts }}
-
-      - name: Build AdvancedCaptivePortal
-        run: platformio ci "examples/AdvancedCaptivePortal/AdvancedCaptivePortal.ino" -l '.' -b ${{ matrix.board }} -O "build_flags=${{ matrix.flags }}" ${{ matrix.opts }}
+      - name: Install platformio
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio
+        
+      - run: PLATFORMIO_SRC_DIR=examples/BlockingCaptivePortal pio run -e ${{ matrix.environment }}
+      - run: PLATFORMIO_SRC_DIR=examples/NonBlockingCaptivePortal pio run -e ${{ matrix.environment }}
+      - run: PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal pio run -e ${{ matrix.environment }}
