--- a/platformio.ini
+++ b/platformio.ini
@@ -1,59 +1,181 @@
-
 [env]
-platform = espressif32@6.6.0
-; platform = espressif32
-; platform_packages=
-;   platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
-;   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-
 framework = arduino
-
-lib_deps = 
-  bblanchon/ArduinoJson @ 7.0.4
-  mathieucarbou/ESP Async WebServer @ 2.9.2
-
-build_flags =
-  -Wall
-  -Wextra
+build_flags = 
+  -Wall -Wextra
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-
+lib_deps = 
+  bblanchon/ArduinoJson @ 7.0.4
+  mathieucarbou/ESP Async WebServer @ 2.9.3
 upload_protocol = esptool
-; upload_port = /dev/cu.usbserial-0001
-; upload_port = /dev/cu.usbserial-10
-
-; monitor_port = /dev/cu.usbserial-0001
-; monitor_port = /dev/cu.usbserial-10
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
 
 [platformio]
-; default_envs = esp32dev
-; default_envs = esp32-poe
-; default_envs = wt32-eth01
-; default_envs = lilygo_eth_lite_s3
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 
-[env:esp32dev]
+; v660
+
+[env:v660_esp32dev]
+platform = espressif32@6.6.0
 board = esp32dev
 
-[env:esp32-poe]
+[env:v660_esp32_poe]
+platform = espressif32@6.6.0
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:wt32-eth01]
+[env:v660_wt32-eth01]
+platform = espressif32@6.6.0
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
   -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=16
 
-[env:lilygo_eth_lite_s3]
+; lilygo-eth-lite-s3
+[env:v660_esp32s3box]
 upload_speed = 115200
+platform = espressif32@6.6.0
+board = esp32s3box
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_CS=9
+  -D ETH_PHY_IRQ=13
+  -D ETH_PHY_RST=14
+  -D ETH_PHY_SPI_MISO=11
+  -D ETH_PHY_SPI_MOSI=12
+  -D ETH_PHY_SPI_SCK=10
+  ; can only be activated with ESP-IDF >= 5
+  ; -D ETH_PHY_TYPE=ETH_PHY_W5500
+  -UARDUINO_USB_CDC_ON_BOOT
+
+; latest-espressif32
+
+[env:latest-espressif32_esp32dev]
+platform = https://github.com/platformio/platform-espressif32.git
+board = esp32dev
+
+[env:latest-espressif32_esp32-poe]
+platform = https://github.com/platformio/platform-espressif32.git
+board = esp32-poe
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+
+[env:latest-espressif32_wt32-eth01]
+platform = https://github.com/platformio/platform-espressif32.git
+board = wt32-eth01
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_POWER=16
+
+[env:latest-espressif32_esp32s3box]
+upload_speed = 115200
+platform = https://github.com/platformio/platform-espressif32.git
+board = esp32s3box
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_CS=9
+  -D ETH_PHY_IRQ=13
+  -D ETH_PHY_RST=14
+  -D ETH_PHY_SPI_MISO=11
+  -D ETH_PHY_SPI_MOSI=12
+  -D ETH_PHY_SPI_SCK=10
+  ; can only be activated with ESP-IDF >= 5
+  ; -D ETH_PHY_TYPE=ETH_PHY_W5500
+  -UARDUINO_USB_CDC_ON_BOOT
+
+; latest-arduino
+
+[env:latest-arduino_esp32dev]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = esp32dev
+
+[env:latest-arduino_esp32-poe]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = esp32-poe
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+
+[env:latest-arduino_wt32-eth01]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = wt32-eth01
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_POWER=16
+
+[env:latest-arduino_esp32s3box]
+upload_speed = 115200
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = esp32s3box
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_CS=9
+  -D ETH_PHY_IRQ=13
+  -D ETH_PHY_RST=14
+  -D ETH_PHY_SPI_MISO=11
+  -D ETH_PHY_SPI_MOSI=12
+  -D ETH_PHY_SPI_SCK=10
+  ; can only be activated with ESP-IDF >= 5
+  -D ETH_PHY_TYPE=ETH_PHY_W5500
+  -UARDUINO_USB_CDC_ON_BOOT
+
+; v300-rc1
+
+[env:v300-rc1_esp32dev]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = esp32dev
+
+[env:v300-rc1_esp32-poe]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = esp32-poe
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+
+[env:v300-rc1_wt32-eth01]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = wt32-eth01
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_POWER=16
+
+[env:v300-rc1_esp32s3box]
+upload_speed = 115200
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 board = esp32s3box
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
