--- a/platformio.ini
+++ b/platformio.ini
@@ -20,17 +20,17 @@ src_dir = examples/NonBlockingCaptivePortal
 ; v660
 
 [env:v660_esp32dev]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32dev
 
 [env:v660_esp32_poe]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
 [env:v660_wt32-eth01]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -40,7 +40,7 @@ build_flags = ${env.build_flags}
 ; lilygo-eth-lite-s3
 [env:v660_esp32s3box]
 upload_speed = 115200
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32s3box
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -141,28 +141,28 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
-; v300-rc1
+; arduino-v3
 
-[env:v300-rc1_esp32dev]
+[env:arduino-v3_esp32dev]
 platform = espressif32
 platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc2
   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 board = esp32dev
 
-[env:v300-rc1_esp32-poe]
+[env:arduino-v3_esp32-poe]
 platform = espressif32
 platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc2
   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:v300-rc1_wt32-eth01]
+[env:arduino-v3_wt32-eth01]
 platform = espressif32
 platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc2
   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 board = wt32-eth01
 build_flags = ${env.build_flags}
@@ -170,11 +170,11 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=16
 
-[env:v300-rc1_esp32s3box]
+[env:arduino-v3_esp32s3box]
 upload_speed = 115200
 platform = espressif32
 platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc1
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc2
   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 board = esp32s3box
 build_flags = ${env.build_flags}
